# pydantic-ai

./: README.md  mkdocs.yml  pyproject.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  docs-preview.yml  harness-compat.yml  pr-guard.yml
agent_docs/: api-design.md
docs/: agent-spec.md  agent.md  builtin-tools.md  capabilities.md  cli.md  coding-agent-skills.md  common-tools.md  direct.md  graph.md  index.md  logfire.md  native-tools.md  nav.json  output.md  testing.md  thinking.md  tools-advanced.md  tools.md  web.md
docs/api/: native_tools.md  settings.md
docs/api/models/: function.md
docs/evals/: core-concepts.md  online-evaluation.md  quick-start.md
docs/evals/evaluators/: built-in.md  llm-judge.md  overview.md  report-evaluators.md  span-based.md
docs/evals/examples/: simple-validation.md
docs/evals/how-to/: lifecycle.md
docs/graph/beta/: index.md
docs/harness/: overview.md
docs/mcp/: overview.md
docs/models/: anthropic.md  google.md  huggingface.md  openai.md  openrouter.md  overview.md  xai.md
docs/ui/: vercel-ai.md
examples/pydantic_ai_examples/: question_graph.py
pydantic_ai_slim/: pyproject.toml
pydantic_ai_slim/pydantic_ai/: __init__.py  _agent_graph.py  _instrumentation.py  _output.py  _parts_manager.py  _run_context.py  _spec.py  _tool_search.py  _utils.py  _warnings.py  direct.py  messages.py  output.py  result.py  run.py  settings.py  tool_manager.py  tools.py
pydantic_ai_slim/pydantic_ai/.agents/skills/building-pydantic-ai-agents/: SKILL.md
pydantic_ai_slim/pydantic_ai/.agents/skills/building-pydantic-ai-agents/references/: ARCHITECTURE.md  COMMON-TASKS.md  TOOLS-CORE.md
pydantic_ai_slim/pydantic_ai/_cli/: __init__.py  web.py
pydantic_ai_slim/pydantic_ai/agent/: __init__.py  abstract.py  spec.py  wrapper.py
pydantic_ai_slim/pydantic_ai/builtin_tools/: __init__.py
pydantic_ai_slim/pydantic_ai/capabilities/: __init__.py  _dynamic.py  _ordering.py  _tool_search.py  abstract.py  combined.py  image_generation.py  instrumentation.py  mcp.py  native_or_local.py  native_tool.py  web_fetch.py  web_search.py  wrapper.py
pydantic_ai_slim/pydantic_ai/common_tools/: image_generation.py
pydantic_ai_slim/pydantic_ai/durable_exec/dbos/: _agent.py
pydantic_ai_slim/pydantic_ai/durable_exec/prefect/: _agent.py
pydantic_ai_slim/pydantic_ai/durable_exec/temporal/: _agent.py  _model.py
pydantic_ai_slim/pydantic_ai/embeddings/: instrumented.py
pydantic_ai_slim/pydantic_ai/models/: AGENTS.md  __init__.py  _tool_choice.py  anthropic.py  bedrock.py  cohere.py  fallback.py  function.py  gemini.py  google.py  groq.py  huggingface.py  instrumented.py  mistral.py  openai.py  openrouter.py  outlines.py  test.py  wrapper.py  xai.py
pydantic_ai_slim/pydantic_ai/native_tools/: AGENTS.md  __init__.py  _tool_search.py
pydantic_ai_slim/pydantic_ai/profiles/: __init__.py  anthropic.py  deepseek.py  google.py  grok.py  openai.py
pydantic_ai_slim/pydantic_ai/providers/: _bedrock_model_names.py  anthropic.py  bedrock.py  deepseek.py  google.py
pydantic_ai_slim/pydantic_ai/toolsets/: _tool_search.py
pydantic_ai_slim/pydantic_ai/ui/: _adapter.py  _event_stream.py
pydantic_ai_slim/pydantic_ai/ui/_web/: api.py  app.py
pydantic_ai_slim/pydantic_ai/ui/ag_ui/: _adapter.py  _event_stream.py  app.py
pydantic_ai_slim/pydantic_ai/ui/vercel_ai/: _adapter.py  _event_stream.py  response_types.py
pydantic_evals/pydantic_evals/: dataset.py  lifecycle.py
pydantic_graph/pydantic_graph/: _utils.py
pydantic_graph/pydantic_graph/beta/: graph.py
tests/: conftest.py  test_ag_ui.py  test_agent.py  test_agent_output_schemas.py  test_builtin_tools.py  test_capabilities.py  test_cli.py  test_dbos.py  test_direct.py  test_examples.py  test_logfire.py  test_messages.py  test_native_tools_deprecation.py  test_parts_manager.py  test_prefect.py  test_streaming.py  test_temporal.py  test_thinking.py  test_tool_search.py  test_tools.py  test_ui.py  test_ui_web.py  test_usage_limits.py  test_utils.py  test_vercel_ai.py  typed_agent.py
tests/cassettes/test_tool_search/: test_anthropic_custom_callable_round_trip.yaml  test_anthropic_native_tool_search_regex_strategy.yaml  test_anthropic_native_tool_search_round_trip.yaml  test_anthropic_native_tool_search_streaming.yaml  test_anthropic_promotes_local_search_history_round_trip.yaml  test_openai_client_tool_search_streaming.yaml  test_openai_execution_client_round_trip.yaml  test_openai_native_tool_search_round_trip.yaml  test_openai_native_tool_search_streaming.yaml  test_openai_promotes_local_search_history_round_trip.yaml  test_tool_search_eval[anthropic].yaml  test_tool_search_eval[google-gla].yaml  test_tool_search_eval[openai].yaml
tests/evals/: test_dataset.py  test_online_capability.py
tests/models/: conftest.py  mock_async_stream.py  test_anthropic.py  test_bedrock.py  test_cohere.py  test_fallback.py  test_google.py  test_groq.py  test_huggingface.py  test_instrumented.py  test_mistral.py  test_model_function.py  test_model_request_parameters.py  test_model_settings.py  test_multimodal_tool_returns.py  test_openai.py  test_openai_responses.py  test_openrouter.py  test_outlines.py  test_tool_choice_matrix.py  test_tool_choice_unit.py  test_xai.py
tests/models/cassettes/test_anthropic/: test_anthropic_task_budget_adds_output_config_and_beta.yaml  test_anthropic_task_budget_coexists_with_effort.yaml
tests/models/cassettes/test_bedrock/: test_stream_cancel.yaml
tests/models/cassettes/test_google/: test_stream_cancel.yaml
tests/models/cassettes/test_tool_choice_matrix/: test_tool_choice_matrix[auto-anthropic].yaml  test_tool_choice_matrix[auto-bedrock].yaml  test_tool_choice_matrix[auto-google].yaml  test_tool_choice_matrix[auto-groq].yaml  test_tool_choice_matrix[auto-mistral].yaml  (+48 more)
tests/models/google/: conftest.py  test_builtin_tools.py  test_code_execution.py  test_native_tools.py  test_structured_output.py
tests/models/xai/: test_search_tools.py
tests/profiles/: test_google.py
tests/providers/: test_anthropic.py  test_bedrock.py  test_deepseek.py
(+12 files in other folders)
