[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "pydantic-ai-slim"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Agent Framework / shim to use Pydantic with LLMs, slim package"
authors = [
    { name = "Samuel Colvin", email = "samuel@pydantic.dev" },
    { name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" },
    { name = "David Montague", email = "david@pydantic.dev" },
    { name = "Alex Hall", email = "alex@pydantic.dev" },
    { name = "Douwe Maan", email = "douwe@pydantic.dev" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/pydantic/pydantic-ai/tree/main/pydantic_ai_slim"
Source = "https://github.com/pydantic/pydantic-ai/tree/main/pydantic_ai_slim"
Documentation = "https://ai.pydantic.dev/install/#slim-install"
Changelog = "https://github.com/pydantic/pydantic-ai/releases"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
    "griffelib>=2.0",
    "httpx>=0.27",
    "pydantic>=2.12",
    "pydantic-graph=={{ version }}",
    "exceptiongroup>=1.2.2; python_version < '3.11'",
    "opentelemetry-api>=1.28.0",
    "typing-inspection>=0.4.0",
    "genai-prices>=0.0.48",
]

[tool.hatch.metadata.hooks.uv-dynamic-versioning.optional-dependencies]
# WARNING if you add optional groups, please update docs/install.md
logfire = ["logfire[httpx]>=4.16.0"]
# Models
openai = ["openai>=2.29.0", "tiktoken>=0.12.0"]
cohere = ["cohere>=5.20.6; platform_system != 'Emscripten'"]
vertexai = ["google-auth>=2.36.0", "requests>=2.32.2"]
google = ["google-genai>=1.70.0"]
anthropic = ["anthropic>=0.97.0"]
xai = ["xai-sdk>=1.5.0"]
groq = ["groq>=0.25.0"]
openrouter = ["openai>=2.8.0"]
# `mistralai==2.4.6` was quarantined on PyPI due to a supply-chain attack (see #5382).
mistral = ["mistralai>=2.0.0,!=2.4.6"]
bedrock = ["boto3>=1.42.63"]
huggingface = ["huggingface-hub>=1.3.4,<2.0.0"]
sentence-transformers = ["sentence-transformers>=5.2.0; python_version < '3.14'"]
# 3.14 pin removable once voyageai 0.3.8 drops: https://pypi.org/project/voyageai/#history
voyageai = ["voyageai>=0.3.7; python_version < '3.14'"]
outlines-transformers = [
    "outlines[transformers]>=1.0.0,<1.3.0; python_version < '3.14' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "transformers>=4.0.0; python_version < '3.14'",
    "pillow>=12.1.1; python_version < '3.14'",
    "torch>=2.8.0; python_version < '3.14' and (sys_platform != 'darwin' or platform_machine != 'x86_64')"
]
outlines-llamacpp = ["outlines[llamacpp]>=1.0.0,<1.3.0; python_version < '3.14'"]
outlines-mlxlm = ["outlines[mlxlm]>=1.0.0,<1.3.0; python_version < '3.14' and platform_system == 'Darwin' and platform_machine == 'arm64'"]
outlines-sglang = ["outlines[sglang]>=1.0.0,<1.3.0; python_version < '3.14'", "pillow>=12.1.1; python_version < '3.14'"]
outlines-vllm-offline = [
    "vllm>=0.15.0; python_version < '3.12' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "torch>=2.8.0; python_version < '3.14' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "outlines>=1.0.0,<1.3.0; python_version < '3.14'"
]
# Tools
duckduckgo = ["ddgs>=9.0.0"]
tavily = ["tavily-python>=0.5.0"]
exa = ["exa-py>=2.0.0"]
web-fetch = ["markdownify>=1.2"]
# CLI
cli = [
    "rich>=13",
    "prompt-toolkit>=3",
    "argcomplete>=3.5.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
]
# MCP
mcp = ["mcp>=1.25.0,<2.0"]
# FastMCP
fastmcp = ["fastmcp>=3.2.4"]
# Evals
evals = ["pydantic-evals=={{ version }}"]
# UI
ui = ["starlette>=0.45.3"]
# A2A
a2a = ["fasta2a>=0.4.1"]
# AG-UI
ag-ui = ["ag-ui-protocol>=0.1.10", "starlette>=0.45.3"]
# Web
web = ["starlette>=0.45.3", "httpx>=0.27.0", "uvicorn>=0.38.0"]
# Retries
retries = ["tenacity>=8.2.3"]
# Temporal
temporal = ["temporalio>=1.24.0"]
# DBOS
dbos = ["dbos>=2.10.0"]
# Prefect
prefect = ["prefect>=3.4.21"]
# Spec (YAML agent specs)
spec = ["pyyaml>=6.0.2", "pydantic-handlebars>=0.1.0"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pai = "pydantic_ai._cli:cli_exit" # TODO remove this when clai has been out for a while

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai"]

# Remove when https://github.com/vllm-project/vllm/pull/30566 is merged.
# Check compatibility with `uv lock --upgrade-package vllm --upgrade-package transformers`.
[tool.uv]
conflicts = [
    [
        { extra = "huggingface" },
        { extra = "outlines-vllm-offline" },
    ],
]

[tool.uv.sources]
pydantic-graph = { workspace = true }
